<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello World</string>
    <string name="click_me">Click me</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
</resources>