<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_700"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:id="@+id/appTitle"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:id="@+id/btn"
        android:padding="20dp"
        app:cornerRadius="10dp"
        />

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp"-->
<!--        android:src="@mipmap/head"-->
<!--        android:scaleType="fitCenter"-->
<!--        />-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter name"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_500"
        android:lines="4"
        android:id="@+id/textInput"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        android:inputType="number"
        />

</LinearLayout>